<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/navigation_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_draft"
        android:icon="@drawable/navigation_draft"
        android:title="@string/title_sign" />
    <item android:id="@+id/empty"
        android:title="@string/title_qr_sign"></item>
    <item
        android:id="@+id/navigation_collab"
        android:icon="@drawable/navigation_collab"
        android:title="@string/title_collab" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/navigation_profile"
        android:title="@string/title_profile" />
</menu>