<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.yokesen.parafdigitalyokesen.view.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_draft"
        android:name="com.yokesen.parafdigitalyokesen.view.ui.draft.DraftFragment"
        android:label="@string/title_sign"
        tools:layout="@layout/fragment_draft" />

    <fragment
        android:id="@+id/navigation_collab"
        android:name="com.yokesen.parafdigitalyokesen.view.ui.collab.CollabFragment"
        android:label="@string/title_collab"
        tools:layout="@layout/fragment_collab" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.yokesen.parafdigitalyokesen.view.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>